// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppContainer components should create an instance of AuthApi correctly 1`] = `
AuthApi {
  "createAuth0Namespace": [Function],
  "fetchClientSettings": [Function],
  "forgotPasswordIE8": [Function],
  "getStategies": [Function],
  "instance": WebAuth {
    "_universalLogin": HostedPages {
      "baseOptions": Object {
        "_sendTelemetry": true,
        "_timesToRetryFailedRequests": 0,
        "clientID": "#{AUTH0_APP_CLIENT_ID}",
        "domain": "#{AUTH0_DOMAIN}",
        "jwksURI": undefined,
        "leeway": 1,
        "plugins": PluginHandler {
          "plugins": Array [],
        },
        "popup": false,
        "popupOrigin": undefined,
        "redirect": true,
        "redirectURI": undefined,
        "responseType": "code",
        "rootUrl": "https://#{AUTH0_DOMAIN}",
        "scope": "openid profile email ",
        "tenant": "#{AUTH0_DOMAIN}",
        "token_issuer": "https://#{AUTH0_DOMAIN}/",
      },
      "client": [Circular],
      "request": RequestBuilder {
        "_sendTelemetry": true,
        "_telemetryInfo": null,
        "_timesToRetryFailedRequests": 0,
        "headers": Object {},
      },
      "warn": Warn {
        "disableWarnings": false,
      },
    },
    "baseOptions": Object {
      "_sendTelemetry": true,
      "_timesToRetryFailedRequests": 0,
      "clientID": "#{AUTH0_APP_CLIENT_ID}",
      "domain": "#{AUTH0_DOMAIN}",
      "jwksURI": undefined,
      "leeway": 1,
      "plugins": PluginHandler {
        "plugins": Array [],
      },
      "popup": false,
      "popupOrigin": undefined,
      "redirect": true,
      "redirectURI": undefined,
      "responseType": "code",
      "rootUrl": "https://#{AUTH0_DOMAIN}",
      "scope": "openid profile email ",
      "tenant": "#{AUTH0_DOMAIN}",
      "token_issuer": "https://#{AUTH0_DOMAIN}/",
    },
    "client": Authentication {
      "baseOptions": Object {
        "_sendTelemetry": true,
        "_timesToRetryFailedRequests": 0,
        "clientID": "#{AUTH0_APP_CLIENT_ID}",
        "domain": "#{AUTH0_DOMAIN}",
        "jwksURI": undefined,
        "leeway": 1,
        "plugins": PluginHandler {
          "plugins": Array [],
        },
        "popup": false,
        "popupOrigin": undefined,
        "redirect": true,
        "redirectURI": undefined,
        "responseType": "code",
        "rootUrl": "https://#{AUTH0_DOMAIN}",
        "scope": "openid profile email ",
        "tenant": "#{AUTH0_DOMAIN}",
        "token_issuer": "https://#{AUTH0_DOMAIN}/",
      },
      "dbConnection": DBConnection {
        "baseOptions": Object {
          "_sendTelemetry": true,
          "_timesToRetryFailedRequests": 0,
          "clientID": "#{AUTH0_APP_CLIENT_ID}",
          "domain": "#{AUTH0_DOMAIN}",
          "jwksURI": undefined,
          "leeway": 1,
          "plugins": PluginHandler {
            "plugins": Array [],
          },
          "popup": false,
          "popupOrigin": undefined,
          "redirect": true,
          "redirectURI": undefined,
          "responseType": "code",
          "rootUrl": "https://#{AUTH0_DOMAIN}",
          "scope": "openid profile email ",
          "tenant": "#{AUTH0_DOMAIN}",
          "token_issuer": "https://#{AUTH0_DOMAIN}/",
        },
        "request": RequestBuilder {
          "_sendTelemetry": true,
          "_telemetryInfo": null,
          "_timesToRetryFailedRequests": 0,
          "headers": Object {},
        },
      },
      "passwordless": PasswordlessAuthentication {
        "baseOptions": Object {
          "_sendTelemetry": true,
          "_timesToRetryFailedRequests": 0,
          "clientID": "#{AUTH0_APP_CLIENT_ID}",
          "domain": "#{AUTH0_DOMAIN}",
          "jwksURI": undefined,
          "leeway": 1,
          "plugins": PluginHandler {
            "plugins": Array [],
          },
          "popup": false,
          "popupOrigin": undefined,
          "redirect": true,
          "redirectURI": undefined,
          "responseType": "code",
          "rootUrl": "https://#{AUTH0_DOMAIN}",
          "scope": "openid profile email ",
          "tenant": "#{AUTH0_DOMAIN}",
          "token_issuer": "https://#{AUTH0_DOMAIN}/",
        },
        "request": RequestBuilder {
          "_sendTelemetry": true,
          "_telemetryInfo": null,
          "_timesToRetryFailedRequests": 0,
          "headers": Object {},
        },
      },
      "request": RequestBuilder {
        "_sendTelemetry": true,
        "_telemetryInfo": null,
        "_timesToRetryFailedRequests": 0,
        "headers": Object {},
      },
      "ssodataStorage": SSODataStorage {
        "storage": Storage {
          "handler": StorageHandler {
            "storage": CookieStorage {},
            "warn": Warn {
              "disableWarnings": undefined,
            },
          },
        },
      },
      "warn": Warn {
        "disableWarnings": false,
      },
    },
    "crossOriginAuthentication": CrossOriginAuthentication {
      "baseOptions": Object {
        "_sendTelemetry": true,
        "_timesToRetryFailedRequests": 0,
        "clientID": "#{AUTH0_APP_CLIENT_ID}",
        "domain": "#{AUTH0_DOMAIN}",
        "jwksURI": undefined,
        "leeway": 1,
        "plugins": PluginHandler {
          "plugins": Array [],
        },
        "popup": false,
        "popupOrigin": undefined,
        "redirect": true,
        "redirectURI": undefined,
        "responseType": "code",
        "rootUrl": "https://#{AUTH0_DOMAIN}",
        "scope": "openid profile email ",
        "tenant": "#{AUTH0_DOMAIN}",
        "token_issuer": "https://#{AUTH0_DOMAIN}/",
      },
      "request": RequestBuilder {
        "_sendTelemetry": true,
        "_telemetryInfo": null,
        "_timesToRetryFailedRequests": 0,
        "headers": Object {},
      },
      "storage": Storage {
        "handler": StorageHandler {
          "storage": CookieStorage {},
          "warn": Warn {
            "disableWarnings": undefined,
          },
        },
      },
      "webAuth": [Circular],
      "webMessageHandler": WebMessageHandler {
        "warn": Warn {
          "disableWarnings": undefined,
        },
        "webAuth": [Circular],
      },
    },
    "popup": Popup {
      "baseOptions": Object {
        "_sendTelemetry": true,
        "_timesToRetryFailedRequests": 0,
        "clientID": "#{AUTH0_APP_CLIENT_ID}",
        "domain": "#{AUTH0_DOMAIN}",
        "jwksURI": undefined,
        "leeway": 1,
        "plugins": PluginHandler {
          "plugins": Array [],
        },
        "popup": false,
        "popupOrigin": undefined,
        "redirect": true,
        "redirectURI": undefined,
        "responseType": "code",
        "rootUrl": "https://#{AUTH0_DOMAIN}",
        "scope": "openid profile email ",
        "tenant": "#{AUTH0_DOMAIN}",
        "token_issuer": "https://#{AUTH0_DOMAIN}/",
      },
      "client": Authentication {
        "baseOptions": Object {
          "_sendTelemetry": true,
          "_timesToRetryFailedRequests": 0,
          "clientID": "#{AUTH0_APP_CLIENT_ID}",
          "domain": "#{AUTH0_DOMAIN}",
          "jwksURI": undefined,
          "leeway": 1,
          "plugins": PluginHandler {
            "plugins": Array [],
          },
          "popup": false,
          "popupOrigin": undefined,
          "redirect": true,
          "redirectURI": undefined,
          "responseType": "code",
          "rootUrl": "https://#{AUTH0_DOMAIN}",
          "scope": "openid profile email ",
          "tenant": "#{AUTH0_DOMAIN}",
          "token_issuer": "https://#{AUTH0_DOMAIN}/",
        },
        "dbConnection": DBConnection {
          "baseOptions": Object {
            "_sendTelemetry": true,
            "_timesToRetryFailedRequests": 0,
            "clientID": "#{AUTH0_APP_CLIENT_ID}",
            "domain": "#{AUTH0_DOMAIN}",
            "jwksURI": undefined,
            "leeway": 1,
            "plugins": PluginHandler {
              "plugins": Array [],
            },
            "popup": false,
            "popupOrigin": undefined,
            "redirect": true,
            "redirectURI": undefined,
            "responseType": "code",
            "rootUrl": "https://#{AUTH0_DOMAIN}",
            "scope": "openid profile email ",
            "tenant": "#{AUTH0_DOMAIN}",
            "token_issuer": "https://#{AUTH0_DOMAIN}/",
          },
          "request": RequestBuilder {
            "_sendTelemetry": true,
            "_telemetryInfo": null,
            "_timesToRetryFailedRequests": 0,
            "headers": Object {},
          },
        },
        "passwordless": PasswordlessAuthentication {
          "baseOptions": Object {
            "_sendTelemetry": true,
            "_timesToRetryFailedRequests": 0,
            "clientID": "#{AUTH0_APP_CLIENT_ID}",
            "domain": "#{AUTH0_DOMAIN}",
            "jwksURI": undefined,
            "leeway": 1,
            "plugins": PluginHandler {
              "plugins": Array [],
            },
            "popup": false,
            "popupOrigin": undefined,
            "redirect": true,
            "redirectURI": undefined,
            "responseType": "code",
            "rootUrl": "https://#{AUTH0_DOMAIN}",
            "scope": "openid profile email ",
            "tenant": "#{AUTH0_DOMAIN}",
            "token_issuer": "https://#{AUTH0_DOMAIN}/",
          },
          "request": RequestBuilder {
            "_sendTelemetry": true,
            "_telemetryInfo": null,
            "_timesToRetryFailedRequests": 0,
            "headers": Object {},
          },
        },
        "request": RequestBuilder {
          "_sendTelemetry": true,
          "_telemetryInfo": null,
          "_timesToRetryFailedRequests": 0,
          "headers": Object {},
        },
        "ssodataStorage": SSODataStorage {
          "storage": Storage {
            "handler": StorageHandler {
              "storage": CookieStorage {},
              "warn": Warn {
                "disableWarnings": undefined,
              },
            },
          },
        },
        "warn": Warn {
          "disableWarnings": false,
        },
      },
      "crossOriginAuthentication": CrossOriginAuthentication {
        "baseOptions": Object {
          "_sendTelemetry": true,
          "_timesToRetryFailedRequests": 0,
          "clientID": "#{AUTH0_APP_CLIENT_ID}",
          "domain": "#{AUTH0_DOMAIN}",
          "jwksURI": undefined,
          "leeway": 1,
          "plugins": PluginHandler {
            "plugins": Array [],
          },
          "popup": false,
          "popupOrigin": undefined,
          "redirect": true,
          "redirectURI": undefined,
          "responseType": "code",
          "rootUrl": "https://#{AUTH0_DOMAIN}",
          "scope": "openid profile email ",
          "tenant": "#{AUTH0_DOMAIN}",
          "token_issuer": "https://#{AUTH0_DOMAIN}/",
        },
        "request": RequestBuilder {
          "_sendTelemetry": true,
          "_telemetryInfo": null,
          "_timesToRetryFailedRequests": 0,
          "headers": Object {},
        },
        "storage": Storage {
          "handler": StorageHandler {
            "storage": CookieStorage {},
            "warn": Warn {
              "disableWarnings": undefined,
            },
          },
        },
        "webAuth": [Circular],
        "webMessageHandler": WebMessageHandler {
          "warn": Warn {
            "disableWarnings": undefined,
          },
          "webAuth": [Circular],
        },
      },
      "transactionManager": TransactionManager {
        "keyLength": 32,
        "namespace": "com.auth0.auth.",
        "options": Object {
          "_sendTelemetry": true,
          "_timesToRetryFailedRequests": 0,
          "clientID": "#{AUTH0_APP_CLIENT_ID}",
          "domain": "#{AUTH0_DOMAIN}",
          "jwksURI": undefined,
          "leeway": 1,
          "plugins": PluginHandler {
            "plugins": Array [],
          },
          "popup": false,
          "popupOrigin": undefined,
          "redirect": true,
          "redirectURI": undefined,
          "responseType": "code",
          "rootUrl": "https://#{AUTH0_DOMAIN}",
          "scope": "openid profile email ",
          "tenant": "#{AUTH0_DOMAIN}",
          "token_issuer": "https://#{AUTH0_DOMAIN}/",
        },
        "storage": Storage {
          "handler": StorageHandler {
            "storage": CookieStorage {},
            "warn": Warn {
              "disableWarnings": undefined,
            },
          },
        },
      },
      "warn": Warn {
        "disableWarnings": false,
      },
      "webAuth": [Circular],
    },
    "redirect": Redirect {
      "baseOptions": Object {
        "_sendTelemetry": true,
        "_timesToRetryFailedRequests": 0,
        "clientID": "#{AUTH0_APP_CLIENT_ID}",
        "domain": "#{AUTH0_DOMAIN}",
        "jwksURI": undefined,
        "leeway": 1,
        "plugins": PluginHandler {
          "plugins": Array [],
        },
        "popup": false,
        "popupOrigin": undefined,
        "redirect": true,
        "redirectURI": undefined,
        "responseType": "code",
        "rootUrl": "https://#{AUTH0_DOMAIN}",
        "scope": "openid profile email ",
        "tenant": "#{AUTH0_DOMAIN}",
        "token_issuer": "https://#{AUTH0_DOMAIN}/",
      },
      "crossOriginAuthentication": CrossOriginAuthentication {
        "baseOptions": Object {
          "_sendTelemetry": true,
          "_timesToRetryFailedRequests": 0,
          "clientID": "#{AUTH0_APP_CLIENT_ID}",
          "domain": "#{AUTH0_DOMAIN}",
          "jwksURI": undefined,
          "leeway": 1,
          "plugins": PluginHandler {
            "plugins": Array [],
          },
          "popup": false,
          "popupOrigin": undefined,
          "redirect": true,
          "redirectURI": undefined,
          "responseType": "code",
          "rootUrl": "https://#{AUTH0_DOMAIN}",
          "scope": "openid profile email ",
          "tenant": "#{AUTH0_DOMAIN}",
          "token_issuer": "https://#{AUTH0_DOMAIN}/",
        },
        "request": RequestBuilder {
          "_sendTelemetry": true,
          "_telemetryInfo": null,
          "_timesToRetryFailedRequests": 0,
          "headers": Object {},
        },
        "storage": Storage {
          "handler": StorageHandler {
            "storage": CookieStorage {},
            "warn": Warn {
              "disableWarnings": undefined,
            },
          },
        },
        "webAuth": [Circular],
        "webMessageHandler": WebMessageHandler {
          "warn": Warn {
            "disableWarnings": undefined,
          },
          "webAuth": [Circular],
        },
      },
      "warn": Warn {
        "disableWarnings": false,
      },
      "webAuth": [Circular],
    },
    "ssodataStorage": SSODataStorage {
      "storage": Storage {
        "handler": StorageHandler {
          "storage": CookieStorage {},
          "warn": Warn {
            "disableWarnings": undefined,
          },
        },
      },
    },
    "transactionManager": TransactionManager {
      "keyLength": 32,
      "namespace": "com.auth0.auth.",
      "options": Object {
        "_sendTelemetry": true,
        "_timesToRetryFailedRequests": 0,
        "clientID": "#{AUTH0_APP_CLIENT_ID}",
        "domain": "#{AUTH0_DOMAIN}",
        "jwksURI": undefined,
        "leeway": 1,
        "plugins": PluginHandler {
          "plugins": Array [],
        },
        "popup": false,
        "popupOrigin": undefined,
        "redirect": true,
        "redirectURI": undefined,
        "responseType": "code",
        "rootUrl": "https://#{AUTH0_DOMAIN}",
        "scope": "openid profile email ",
        "tenant": "#{AUTH0_DOMAIN}",
        "token_issuer": "https://#{AUTH0_DOMAIN}/",
      },
      "storage": Storage {
        "handler": StorageHandler {
          "storage": CookieStorage {},
          "warn": Warn {
            "disableWarnings": undefined,
          },
        },
      },
    },
    "webMessageHandler": WebMessageHandler {
      "warn": Warn {
        "disableWarnings": undefined,
      },
      "webAuth": [Circular],
    },
  },
  "loginIE8": [Function],
  "opts": Object {
    "_sendTelemetry": true,
    "_timesToRetryFailedRequests": 0,
    "clientID": "#{AUTH0_APP_CLIENT_ID}",
    "domain": "#{AUTH0_DOMAIN}",
    "jwksURI": undefined,
    "leeway": 1,
    "plugins": PluginHandler {
      "plugins": Array [],
    },
    "popup": false,
    "popupOrigin": undefined,
    "redirect": true,
    "redirectURI": undefined,
    "responseType": "code",
    "rootUrl": "https://#{AUTH0_DOMAIN}",
    "scope": "openid profile email ",
    "tenant": "#{AUTH0_DOMAIN}",
    "token_issuer": "https://#{AUTH0_DOMAIN}/",
  },
  "params": Object {
    "_sendTelemetry": true,
    "_timesToRetryFailedRequests": 0,
    "clientID": "#{AUTH0_APP_CLIENT_ID}",
    "domain": "#{AUTH0_DOMAIN}",
    "jwksURI": undefined,
    "leeway": 1,
    "plugins": PluginHandler {
      "plugins": Array [],
    },
    "popup": false,
    "popupOrigin": undefined,
    "redirect": true,
    "redirectURI": undefined,
    "responseType": "code",
    "rootUrl": "https://#{AUTH0_DOMAIN}",
    "scope": "openid profile email ",
    "tenant": "#{AUTH0_DOMAIN}",
    "token_issuer": "https://#{AUTH0_DOMAIN}/",
  },
  "registerIE8": [Function],
  "resendVerificationEmail": [Function],
  "resetPassword": [Function],
  "submitWSForm": [Function],
}
`;

exports[`AppContainer components should create an instance of AuthApi correctly with UnauthorizedError config 1`] = `
WebAuth {
  "_universalLogin": HostedPages {
    "baseOptions": Object {
      "_csrf": "cw0pc1an-H9XDTeTz_pO9vgCCPC152gm-srY",
      "_intstate": "deprecated",
      "_sendTelemetry": true,
      "_timesToRetryFailedRequests": 0,
      "clientID": "RMpYVjKE_B85IO6Euc2i3IstVAstrEHK",
      "domain": "#{AUTH0_DOMAIN}",
      "jwksURI": undefined,
      "leeway": 1,
      "myerror": "UnauthorizedError: Please verify your email before logging in.",
      "myerrorcode": "user_not_verified",
      "nonce": "636892985897575998.YzdhZDAzZWEtMzMxMi00M2UyLWE3YTUtZWM4Y2Y1ZTg0MTA4OTMyMTFjN2UtZDQ3My00OTkyLWI5YTktMWQ3NDcwMzRkMWY4",
      "plugins": PluginHandler {
        "plugins": Array [],
      },
      "popup": false,
      "popupOrigin": undefined,
      "protocol": "oauth2",
      "redirect": true,
      "redirectURI": "https://dev-identityadmin.nice.org.uk/signin-auth0",
      "responseType": "code",
      "response_mode": "form_post",
      "rootUrl": "https://#{AUTH0_DOMAIN}",
      "scope": "openid read:profile",
      "state": "g6Fo2SBVdzZld3h1Z25QeURkREh1LTBVcU9rY2taRGR4dlBEU6N0aWTZIGxzcUl0aUxRTHFNam5yVFRJdzhlNllzLUFWNXU4bTJso2NpZNkgUk1wWVZqS0VfQjg1SU82RXVjMmkzSXN0VkFzdHJFSEs",
      "tenant": "#{AUTH0_DOMAIN}",
      "token_issuer": "https://#{AUTH0_DOMAIN}/",
      "type": "code",
      "userid": "auth0|5c9b9bd6e893312e96990ebe",
      "x-client-SKU": "ID_NETSTANDARD1_4",
      "x-client-ver": "5.2.4.0",
    },
    "client": [Circular],
    "request": RequestBuilder {
      "_sendTelemetry": true,
      "_telemetryInfo": null,
      "_timesToRetryFailedRequests": 0,
      "headers": Object {},
    },
    "warn": Warn {
      "disableWarnings": false,
    },
  },
  "baseOptions": Object {
    "_csrf": "cw0pc1an-H9XDTeTz_pO9vgCCPC152gm-srY",
    "_intstate": "deprecated",
    "_sendTelemetry": true,
    "_timesToRetryFailedRequests": 0,
    "clientID": "RMpYVjKE_B85IO6Euc2i3IstVAstrEHK",
    "domain": "#{AUTH0_DOMAIN}",
    "jwksURI": undefined,
    "leeway": 1,
    "myerror": "UnauthorizedError: Please verify your email before logging in.",
    "myerrorcode": "user_not_verified",
    "nonce": "636892985897575998.YzdhZDAzZWEtMzMxMi00M2UyLWE3YTUtZWM4Y2Y1ZTg0MTA4OTMyMTFjN2UtZDQ3My00OTkyLWI5YTktMWQ3NDcwMzRkMWY4",
    "plugins": PluginHandler {
      "plugins": Array [],
    },
    "popup": false,
    "popupOrigin": undefined,
    "protocol": "oauth2",
    "redirect": true,
    "redirectURI": "https://dev-identityadmin.nice.org.uk/signin-auth0",
    "responseType": "code",
    "response_mode": "form_post",
    "rootUrl": "https://#{AUTH0_DOMAIN}",
    "scope": "openid read:profile",
    "state": "g6Fo2SBVdzZld3h1Z25QeURkREh1LTBVcU9rY2taRGR4dlBEU6N0aWTZIGxzcUl0aUxRTHFNam5yVFRJdzhlNllzLUFWNXU4bTJso2NpZNkgUk1wWVZqS0VfQjg1SU82RXVjMmkzSXN0VkFzdHJFSEs",
    "tenant": "#{AUTH0_DOMAIN}",
    "token_issuer": "https://#{AUTH0_DOMAIN}/",
    "type": "code",
    "userid": "auth0|5c9b9bd6e893312e96990ebe",
    "x-client-SKU": "ID_NETSTANDARD1_4",
    "x-client-ver": "5.2.4.0",
  },
  "client": Authentication {
    "baseOptions": Object {
      "_csrf": "cw0pc1an-H9XDTeTz_pO9vgCCPC152gm-srY",
      "_intstate": "deprecated",
      "_sendTelemetry": true,
      "_timesToRetryFailedRequests": 0,
      "clientID": "RMpYVjKE_B85IO6Euc2i3IstVAstrEHK",
      "domain": "#{AUTH0_DOMAIN}",
      "jwksURI": undefined,
      "leeway": 1,
      "myerror": "UnauthorizedError: Please verify your email before logging in.",
      "myerrorcode": "user_not_verified",
      "nonce": "636892985897575998.YzdhZDAzZWEtMzMxMi00M2UyLWE3YTUtZWM4Y2Y1ZTg0MTA4OTMyMTFjN2UtZDQ3My00OTkyLWI5YTktMWQ3NDcwMzRkMWY4",
      "plugins": PluginHandler {
        "plugins": Array [],
      },
      "popup": false,
      "popupOrigin": undefined,
      "protocol": "oauth2",
      "redirect": true,
      "redirectURI": "https://dev-identityadmin.nice.org.uk/signin-auth0",
      "responseType": "code",
      "response_mode": "form_post",
      "rootUrl": "https://#{AUTH0_DOMAIN}",
      "scope": "openid read:profile",
      "state": "g6Fo2SBVdzZld3h1Z25QeURkREh1LTBVcU9rY2taRGR4dlBEU6N0aWTZIGxzcUl0aUxRTHFNam5yVFRJdzhlNllzLUFWNXU4bTJso2NpZNkgUk1wWVZqS0VfQjg1SU82RXVjMmkzSXN0VkFzdHJFSEs",
      "tenant": "#{AUTH0_DOMAIN}",
      "token_issuer": "https://#{AUTH0_DOMAIN}/",
      "type": "code",
      "userid": "auth0|5c9b9bd6e893312e96990ebe",
      "x-client-SKU": "ID_NETSTANDARD1_4",
      "x-client-ver": "5.2.4.0",
    },
    "dbConnection": DBConnection {
      "baseOptions": Object {
        "_csrf": "cw0pc1an-H9XDTeTz_pO9vgCCPC152gm-srY",
        "_intstate": "deprecated",
        "_sendTelemetry": true,
        "_timesToRetryFailedRequests": 0,
        "clientID": "RMpYVjKE_B85IO6Euc2i3IstVAstrEHK",
        "domain": "#{AUTH0_DOMAIN}",
        "jwksURI": undefined,
        "leeway": 1,
        "myerror": "UnauthorizedError: Please verify your email before logging in.",
        "myerrorcode": "user_not_verified",
        "nonce": "636892985897575998.YzdhZDAzZWEtMzMxMi00M2UyLWE3YTUtZWM4Y2Y1ZTg0MTA4OTMyMTFjN2UtZDQ3My00OTkyLWI5YTktMWQ3NDcwMzRkMWY4",
        "plugins": PluginHandler {
          "plugins": Array [],
        },
        "popup": false,
        "popupOrigin": undefined,
        "protocol": "oauth2",
        "redirect": true,
        "redirectURI": "https://dev-identityadmin.nice.org.uk/signin-auth0",
        "responseType": "code",
        "response_mode": "form_post",
        "rootUrl": "https://#{AUTH0_DOMAIN}",
        "scope": "openid read:profile",
        "state": "g6Fo2SBVdzZld3h1Z25QeURkREh1LTBVcU9rY2taRGR4dlBEU6N0aWTZIGxzcUl0aUxRTHFNam5yVFRJdzhlNllzLUFWNXU4bTJso2NpZNkgUk1wWVZqS0VfQjg1SU82RXVjMmkzSXN0VkFzdHJFSEs",
        "tenant": "#{AUTH0_DOMAIN}",
        "token_issuer": "https://#{AUTH0_DOMAIN}/",
        "type": "code",
        "userid": "auth0|5c9b9bd6e893312e96990ebe",
        "x-client-SKU": "ID_NETSTANDARD1_4",
        "x-client-ver": "5.2.4.0",
      },
      "request": RequestBuilder {
        "_sendTelemetry": true,
        "_telemetryInfo": null,
        "_timesToRetryFailedRequests": 0,
        "headers": Object {},
      },
    },
    "passwordless": PasswordlessAuthentication {
      "baseOptions": Object {
        "_csrf": "cw0pc1an-H9XDTeTz_pO9vgCCPC152gm-srY",
        "_intstate": "deprecated",
        "_sendTelemetry": true,
        "_timesToRetryFailedRequests": 0,
        "clientID": "RMpYVjKE_B85IO6Euc2i3IstVAstrEHK",
        "domain": "#{AUTH0_DOMAIN}",
        "jwksURI": undefined,
        "leeway": 1,
        "myerror": "UnauthorizedError: Please verify your email before logging in.",
        "myerrorcode": "user_not_verified",
        "nonce": "636892985897575998.YzdhZDAzZWEtMzMxMi00M2UyLWE3YTUtZWM4Y2Y1ZTg0MTA4OTMyMTFjN2UtZDQ3My00OTkyLWI5YTktMWQ3NDcwMzRkMWY4",
        "plugins": PluginHandler {
          "plugins": Array [],
        },
        "popup": false,
        "popupOrigin": undefined,
        "protocol": "oauth2",
        "redirect": true,
        "redirectURI": "https://dev-identityadmin.nice.org.uk/signin-auth0",
        "responseType": "code",
        "response_mode": "form_post",
        "rootUrl": "https://#{AUTH0_DOMAIN}",
        "scope": "openid read:profile",
        "state": "g6Fo2SBVdzZld3h1Z25QeURkREh1LTBVcU9rY2taRGR4dlBEU6N0aWTZIGxzcUl0aUxRTHFNam5yVFRJdzhlNllzLUFWNXU4bTJso2NpZNkgUk1wWVZqS0VfQjg1SU82RXVjMmkzSXN0VkFzdHJFSEs",
        "tenant": "#{AUTH0_DOMAIN}",
        "token_issuer": "https://#{AUTH0_DOMAIN}/",
        "type": "code",
        "userid": "auth0|5c9b9bd6e893312e96990ebe",
        "x-client-SKU": "ID_NETSTANDARD1_4",
        "x-client-ver": "5.2.4.0",
      },
      "request": RequestBuilder {
        "_sendTelemetry": true,
        "_telemetryInfo": null,
        "_timesToRetryFailedRequests": 0,
        "headers": Object {},
      },
    },
    "request": RequestBuilder {
      "_sendTelemetry": true,
      "_telemetryInfo": null,
      "_timesToRetryFailedRequests": 0,
      "headers": Object {},
    },
    "ssodataStorage": SSODataStorage {
      "storage": Storage {
        "handler": StorageHandler {
          "storage": CookieStorage {},
          "warn": Warn {
            "disableWarnings": undefined,
          },
        },
      },
    },
    "warn": Warn {
      "disableWarnings": false,
    },
  },
  "crossOriginAuthentication": CrossOriginAuthentication {
    "baseOptions": Object {
      "_csrf": "cw0pc1an-H9XDTeTz_pO9vgCCPC152gm-srY",
      "_intstate": "deprecated",
      "_sendTelemetry": true,
      "_timesToRetryFailedRequests": 0,
      "clientID": "RMpYVjKE_B85IO6Euc2i3IstVAstrEHK",
      "domain": "#{AUTH0_DOMAIN}",
      "jwksURI": undefined,
      "leeway": 1,
      "myerror": "UnauthorizedError: Please verify your email before logging in.",
      "myerrorcode": "user_not_verified",
      "nonce": "636892985897575998.YzdhZDAzZWEtMzMxMi00M2UyLWE3YTUtZWM4Y2Y1ZTg0MTA4OTMyMTFjN2UtZDQ3My00OTkyLWI5YTktMWQ3NDcwMzRkMWY4",
      "plugins": PluginHandler {
        "plugins": Array [],
      },
      "popup": false,
      "popupOrigin": undefined,
      "protocol": "oauth2",
      "redirect": true,
      "redirectURI": "https://dev-identityadmin.nice.org.uk/signin-auth0",
      "responseType": "code",
      "response_mode": "form_post",
      "rootUrl": "https://#{AUTH0_DOMAIN}",
      "scope": "openid read:profile",
      "state": "g6Fo2SBVdzZld3h1Z25QeURkREh1LTBVcU9rY2taRGR4dlBEU6N0aWTZIGxzcUl0aUxRTHFNam5yVFRJdzhlNllzLUFWNXU4bTJso2NpZNkgUk1wWVZqS0VfQjg1SU82RXVjMmkzSXN0VkFzdHJFSEs",
      "tenant": "#{AUTH0_DOMAIN}",
      "token_issuer": "https://#{AUTH0_DOMAIN}/",
      "type": "code",
      "userid": "auth0|5c9b9bd6e893312e96990ebe",
      "x-client-SKU": "ID_NETSTANDARD1_4",
      "x-client-ver": "5.2.4.0",
    },
    "request": RequestBuilder {
      "_sendTelemetry": true,
      "_telemetryInfo": null,
      "_timesToRetryFailedRequests": 0,
      "headers": Object {},
    },
    "storage": Storage {
      "handler": StorageHandler {
        "storage": CookieStorage {},
        "warn": Warn {
          "disableWarnings": undefined,
        },
      },
    },
    "webAuth": [Circular],
    "webMessageHandler": WebMessageHandler {
      "warn": Warn {
        "disableWarnings": undefined,
      },
      "webAuth": [Circular],
    },
  },
  "popup": Popup {
    "baseOptions": Object {
      "_csrf": "cw0pc1an-H9XDTeTz_pO9vgCCPC152gm-srY",
      "_intstate": "deprecated",
      "_sendTelemetry": true,
      "_timesToRetryFailedRequests": 0,
      "clientID": "RMpYVjKE_B85IO6Euc2i3IstVAstrEHK",
      "domain": "#{AUTH0_DOMAIN}",
      "jwksURI": undefined,
      "leeway": 1,
      "myerror": "UnauthorizedError: Please verify your email before logging in.",
      "myerrorcode": "user_not_verified",
      "nonce": "636892985897575998.YzdhZDAzZWEtMzMxMi00M2UyLWE3YTUtZWM4Y2Y1ZTg0MTA4OTMyMTFjN2UtZDQ3My00OTkyLWI5YTktMWQ3NDcwMzRkMWY4",
      "plugins": PluginHandler {
        "plugins": Array [],
      },
      "popup": false,
      "popupOrigin": undefined,
      "protocol": "oauth2",
      "redirect": true,
      "redirectURI": "https://dev-identityadmin.nice.org.uk/signin-auth0",
      "responseType": "code",
      "response_mode": "form_post",
      "rootUrl": "https://#{AUTH0_DOMAIN}",
      "scope": "openid read:profile",
      "state": "g6Fo2SBVdzZld3h1Z25QeURkREh1LTBVcU9rY2taRGR4dlBEU6N0aWTZIGxzcUl0aUxRTHFNam5yVFRJdzhlNllzLUFWNXU4bTJso2NpZNkgUk1wWVZqS0VfQjg1SU82RXVjMmkzSXN0VkFzdHJFSEs",
      "tenant": "#{AUTH0_DOMAIN}",
      "token_issuer": "https://#{AUTH0_DOMAIN}/",
      "type": "code",
      "userid": "auth0|5c9b9bd6e893312e96990ebe",
      "x-client-SKU": "ID_NETSTANDARD1_4",
      "x-client-ver": "5.2.4.0",
    },
    "client": Authentication {
      "baseOptions": Object {
        "_csrf": "cw0pc1an-H9XDTeTz_pO9vgCCPC152gm-srY",
        "_intstate": "deprecated",
        "_sendTelemetry": true,
        "_timesToRetryFailedRequests": 0,
        "clientID": "RMpYVjKE_B85IO6Euc2i3IstVAstrEHK",
        "domain": "#{AUTH0_DOMAIN}",
        "jwksURI": undefined,
        "leeway": 1,
        "myerror": "UnauthorizedError: Please verify your email before logging in.",
        "myerrorcode": "user_not_verified",
        "nonce": "636892985897575998.YzdhZDAzZWEtMzMxMi00M2UyLWE3YTUtZWM4Y2Y1ZTg0MTA4OTMyMTFjN2UtZDQ3My00OTkyLWI5YTktMWQ3NDcwMzRkMWY4",
        "plugins": PluginHandler {
          "plugins": Array [],
        },
        "popup": false,
        "popupOrigin": undefined,
        "protocol": "oauth2",
        "redirect": true,
        "redirectURI": "https://dev-identityadmin.nice.org.uk/signin-auth0",
        "responseType": "code",
        "response_mode": "form_post",
        "rootUrl": "https://#{AUTH0_DOMAIN}",
        "scope": "openid read:profile",
        "state": "g6Fo2SBVdzZld3h1Z25QeURkREh1LTBVcU9rY2taRGR4dlBEU6N0aWTZIGxzcUl0aUxRTHFNam5yVFRJdzhlNllzLUFWNXU4bTJso2NpZNkgUk1wWVZqS0VfQjg1SU82RXVjMmkzSXN0VkFzdHJFSEs",
        "tenant": "#{AUTH0_DOMAIN}",
        "token_issuer": "https://#{AUTH0_DOMAIN}/",
        "type": "code",
        "userid": "auth0|5c9b9bd6e893312e96990ebe",
        "x-client-SKU": "ID_NETSTANDARD1_4",
        "x-client-ver": "5.2.4.0",
      },
      "dbConnection": DBConnection {
        "baseOptions": Object {
          "_csrf": "cw0pc1an-H9XDTeTz_pO9vgCCPC152gm-srY",
          "_intstate": "deprecated",
          "_sendTelemetry": true,
          "_timesToRetryFailedRequests": 0,
          "clientID": "RMpYVjKE_B85IO6Euc2i3IstVAstrEHK",
          "domain": "#{AUTH0_DOMAIN}",
          "jwksURI": undefined,
          "leeway": 1,
          "myerror": "UnauthorizedError: Please verify your email before logging in.",
          "myerrorcode": "user_not_verified",
          "nonce": "636892985897575998.YzdhZDAzZWEtMzMxMi00M2UyLWE3YTUtZWM4Y2Y1ZTg0MTA4OTMyMTFjN2UtZDQ3My00OTkyLWI5YTktMWQ3NDcwMzRkMWY4",
          "plugins": PluginHandler {
            "plugins": Array [],
          },
          "popup": false,
          "popupOrigin": undefined,
          "protocol": "oauth2",
          "redirect": true,
          "redirectURI": "https://dev-identityadmin.nice.org.uk/signin-auth0",
          "responseType": "code",
          "response_mode": "form_post",
          "rootUrl": "https://#{AUTH0_DOMAIN}",
          "scope": "openid read:profile",
          "state": "g6Fo2SBVdzZld3h1Z25QeURkREh1LTBVcU9rY2taRGR4dlBEU6N0aWTZIGxzcUl0aUxRTHFNam5yVFRJdzhlNllzLUFWNXU4bTJso2NpZNkgUk1wWVZqS0VfQjg1SU82RXVjMmkzSXN0VkFzdHJFSEs",
          "tenant": "#{AUTH0_DOMAIN}",
          "token_issuer": "https://#{AUTH0_DOMAIN}/",
          "type": "code",
          "userid": "auth0|5c9b9bd6e893312e96990ebe",
          "x-client-SKU": "ID_NETSTANDARD1_4",
          "x-client-ver": "5.2.4.0",
        },
        "request": RequestBuilder {
          "_sendTelemetry": true,
          "_telemetryInfo": null,
          "_timesToRetryFailedRequests": 0,
          "headers": Object {},
        },
      },
      "passwordless": PasswordlessAuthentication {
        "baseOptions": Object {
          "_csrf": "cw0pc1an-H9XDTeTz_pO9vgCCPC152gm-srY",
          "_intstate": "deprecated",
          "_sendTelemetry": true,
          "_timesToRetryFailedRequests": 0,
          "clientID": "RMpYVjKE_B85IO6Euc2i3IstVAstrEHK",
          "domain": "#{AUTH0_DOMAIN}",
          "jwksURI": undefined,
          "leeway": 1,
          "myerror": "UnauthorizedError: Please verify your email before logging in.",
          "myerrorcode": "user_not_verified",
          "nonce": "636892985897575998.YzdhZDAzZWEtMzMxMi00M2UyLWE3YTUtZWM4Y2Y1ZTg0MTA4OTMyMTFjN2UtZDQ3My00OTkyLWI5YTktMWQ3NDcwMzRkMWY4",
          "plugins": PluginHandler {
            "plugins": Array [],
          },
          "popup": false,
          "popupOrigin": undefined,
          "protocol": "oauth2",
          "redirect": true,
          "redirectURI": "https://dev-identityadmin.nice.org.uk/signin-auth0",
          "responseType": "code",
          "response_mode": "form_post",
          "rootUrl": "https://#{AUTH0_DOMAIN}",
          "scope": "openid read:profile",
          "state": "g6Fo2SBVdzZld3h1Z25QeURkREh1LTBVcU9rY2taRGR4dlBEU6N0aWTZIGxzcUl0aUxRTHFNam5yVFRJdzhlNllzLUFWNXU4bTJso2NpZNkgUk1wWVZqS0VfQjg1SU82RXVjMmkzSXN0VkFzdHJFSEs",
          "tenant": "#{AUTH0_DOMAIN}",
          "token_issuer": "https://#{AUTH0_DOMAIN}/",
          "type": "code",
          "userid": "auth0|5c9b9bd6e893312e96990ebe",
          "x-client-SKU": "ID_NETSTANDARD1_4",
          "x-client-ver": "5.2.4.0",
        },
        "request": RequestBuilder {
          "_sendTelemetry": true,
          "_telemetryInfo": null,
          "_timesToRetryFailedRequests": 0,
          "headers": Object {},
        },
      },
      "request": RequestBuilder {
        "_sendTelemetry": true,
        "_telemetryInfo": null,
        "_timesToRetryFailedRequests": 0,
        "headers": Object {},
      },
      "ssodataStorage": SSODataStorage {
        "storage": Storage {
          "handler": StorageHandler {
            "storage": CookieStorage {},
            "warn": Warn {
              "disableWarnings": undefined,
            },
          },
        },
      },
      "warn": Warn {
        "disableWarnings": false,
      },
    },
    "crossOriginAuthentication": CrossOriginAuthentication {
      "baseOptions": Object {
        "_csrf": "cw0pc1an-H9XDTeTz_pO9vgCCPC152gm-srY",
        "_intstate": "deprecated",
        "_sendTelemetry": true,
        "_timesToRetryFailedRequests": 0,
        "clientID": "RMpYVjKE_B85IO6Euc2i3IstVAstrEHK",
        "domain": "#{AUTH0_DOMAIN}",
        "jwksURI": undefined,
        "leeway": 1,
        "myerror": "UnauthorizedError: Please verify your email before logging in.",
        "myerrorcode": "user_not_verified",
        "nonce": "636892985897575998.YzdhZDAzZWEtMzMxMi00M2UyLWE3YTUtZWM4Y2Y1ZTg0MTA4OTMyMTFjN2UtZDQ3My00OTkyLWI5YTktMWQ3NDcwMzRkMWY4",
        "plugins": PluginHandler {
          "plugins": Array [],
        },
        "popup": false,
        "popupOrigin": undefined,
        "protocol": "oauth2",
        "redirect": true,
        "redirectURI": "https://dev-identityadmin.nice.org.uk/signin-auth0",
        "responseType": "code",
        "response_mode": "form_post",
        "rootUrl": "https://#{AUTH0_DOMAIN}",
        "scope": "openid read:profile",
        "state": "g6Fo2SBVdzZld3h1Z25QeURkREh1LTBVcU9rY2taRGR4dlBEU6N0aWTZIGxzcUl0aUxRTHFNam5yVFRJdzhlNllzLUFWNXU4bTJso2NpZNkgUk1wWVZqS0VfQjg1SU82RXVjMmkzSXN0VkFzdHJFSEs",
        "tenant": "#{AUTH0_DOMAIN}",
        "token_issuer": "https://#{AUTH0_DOMAIN}/",
        "type": "code",
        "userid": "auth0|5c9b9bd6e893312e96990ebe",
        "x-client-SKU": "ID_NETSTANDARD1_4",
        "x-client-ver": "5.2.4.0",
      },
      "request": RequestBuilder {
        "_sendTelemetry": true,
        "_telemetryInfo": null,
        "_timesToRetryFailedRequests": 0,
        "headers": Object {},
      },
      "storage": Storage {
        "handler": StorageHandler {
          "storage": CookieStorage {},
          "warn": Warn {
            "disableWarnings": undefined,
          },
        },
      },
      "webAuth": [Circular],
      "webMessageHandler": WebMessageHandler {
        "warn": Warn {
          "disableWarnings": undefined,
        },
        "webAuth": [Circular],
      },
    },
    "transactionManager": TransactionManager {
      "keyLength": 32,
      "namespace": "com.auth0.auth.",
      "options": Object {
        "_csrf": "cw0pc1an-H9XDTeTz_pO9vgCCPC152gm-srY",
        "_intstate": "deprecated",
        "_sendTelemetry": true,
        "_timesToRetryFailedRequests": 0,
        "clientID": "RMpYVjKE_B85IO6Euc2i3IstVAstrEHK",
        "domain": "#{AUTH0_DOMAIN}",
        "jwksURI": undefined,
        "leeway": 1,
        "myerror": "UnauthorizedError: Please verify your email before logging in.",
        "myerrorcode": "user_not_verified",
        "nonce": "636892985897575998.YzdhZDAzZWEtMzMxMi00M2UyLWE3YTUtZWM4Y2Y1ZTg0MTA4OTMyMTFjN2UtZDQ3My00OTkyLWI5YTktMWQ3NDcwMzRkMWY4",
        "plugins": PluginHandler {
          "plugins": Array [],
        },
        "popup": false,
        "popupOrigin": undefined,
        "protocol": "oauth2",
        "redirect": true,
        "redirectURI": "https://dev-identityadmin.nice.org.uk/signin-auth0",
        "responseType": "code",
        "response_mode": "form_post",
        "rootUrl": "https://#{AUTH0_DOMAIN}",
        "scope": "openid read:profile",
        "state": "g6Fo2SBVdzZld3h1Z25QeURkREh1LTBVcU9rY2taRGR4dlBEU6N0aWTZIGxzcUl0aUxRTHFNam5yVFRJdzhlNllzLUFWNXU4bTJso2NpZNkgUk1wWVZqS0VfQjg1SU82RXVjMmkzSXN0VkFzdHJFSEs",
        "tenant": "#{AUTH0_DOMAIN}",
        "token_issuer": "https://#{AUTH0_DOMAIN}/",
        "type": "code",
        "userid": "auth0|5c9b9bd6e893312e96990ebe",
        "x-client-SKU": "ID_NETSTANDARD1_4",
        "x-client-ver": "5.2.4.0",
      },
      "storage": Storage {
        "handler": StorageHandler {
          "storage": CookieStorage {},
          "warn": Warn {
            "disableWarnings": undefined,
          },
        },
      },
    },
    "warn": Warn {
      "disableWarnings": false,
    },
    "webAuth": [Circular],
  },
  "redirect": Redirect {
    "baseOptions": Object {
      "_csrf": "cw0pc1an-H9XDTeTz_pO9vgCCPC152gm-srY",
      "_intstate": "deprecated",
      "_sendTelemetry": true,
      "_timesToRetryFailedRequests": 0,
      "clientID": "RMpYVjKE_B85IO6Euc2i3IstVAstrEHK",
      "domain": "#{AUTH0_DOMAIN}",
      "jwksURI": undefined,
      "leeway": 1,
      "myerror": "UnauthorizedError: Please verify your email before logging in.",
      "myerrorcode": "user_not_verified",
      "nonce": "636892985897575998.YzdhZDAzZWEtMzMxMi00M2UyLWE3YTUtZWM4Y2Y1ZTg0MTA4OTMyMTFjN2UtZDQ3My00OTkyLWI5YTktMWQ3NDcwMzRkMWY4",
      "plugins": PluginHandler {
        "plugins": Array [],
      },
      "popup": false,
      "popupOrigin": undefined,
      "protocol": "oauth2",
      "redirect": true,
      "redirectURI": "https://dev-identityadmin.nice.org.uk/signin-auth0",
      "responseType": "code",
      "response_mode": "form_post",
      "rootUrl": "https://#{AUTH0_DOMAIN}",
      "scope": "openid read:profile",
      "state": "g6Fo2SBVdzZld3h1Z25QeURkREh1LTBVcU9rY2taRGR4dlBEU6N0aWTZIGxzcUl0aUxRTHFNam5yVFRJdzhlNllzLUFWNXU4bTJso2NpZNkgUk1wWVZqS0VfQjg1SU82RXVjMmkzSXN0VkFzdHJFSEs",
      "tenant": "#{AUTH0_DOMAIN}",
      "token_issuer": "https://#{AUTH0_DOMAIN}/",
      "type": "code",
      "userid": "auth0|5c9b9bd6e893312e96990ebe",
      "x-client-SKU": "ID_NETSTANDARD1_4",
      "x-client-ver": "5.2.4.0",
    },
    "crossOriginAuthentication": CrossOriginAuthentication {
      "baseOptions": Object {
        "_csrf": "cw0pc1an-H9XDTeTz_pO9vgCCPC152gm-srY",
        "_intstate": "deprecated",
        "_sendTelemetry": true,
        "_timesToRetryFailedRequests": 0,
        "clientID": "RMpYVjKE_B85IO6Euc2i3IstVAstrEHK",
        "domain": "#{AUTH0_DOMAIN}",
        "jwksURI": undefined,
        "leeway": 1,
        "myerror": "UnauthorizedError: Please verify your email before logging in.",
        "myerrorcode": "user_not_verified",
        "nonce": "636892985897575998.YzdhZDAzZWEtMzMxMi00M2UyLWE3YTUtZWM4Y2Y1ZTg0MTA4OTMyMTFjN2UtZDQ3My00OTkyLWI5YTktMWQ3NDcwMzRkMWY4",
        "plugins": PluginHandler {
          "plugins": Array [],
        },
        "popup": false,
        "popupOrigin": undefined,
        "protocol": "oauth2",
        "redirect": true,
        "redirectURI": "https://dev-identityadmin.nice.org.uk/signin-auth0",
        "responseType": "code",
        "response_mode": "form_post",
        "rootUrl": "https://#{AUTH0_DOMAIN}",
        "scope": "openid read:profile",
        "state": "g6Fo2SBVdzZld3h1Z25QeURkREh1LTBVcU9rY2taRGR4dlBEU6N0aWTZIGxzcUl0aUxRTHFNam5yVFRJdzhlNllzLUFWNXU4bTJso2NpZNkgUk1wWVZqS0VfQjg1SU82RXVjMmkzSXN0VkFzdHJFSEs",
        "tenant": "#{AUTH0_DOMAIN}",
        "token_issuer": "https://#{AUTH0_DOMAIN}/",
        "type": "code",
        "userid": "auth0|5c9b9bd6e893312e96990ebe",
        "x-client-SKU": "ID_NETSTANDARD1_4",
        "x-client-ver": "5.2.4.0",
      },
      "request": RequestBuilder {
        "_sendTelemetry": true,
        "_telemetryInfo": null,
        "_timesToRetryFailedRequests": 0,
        "headers": Object {},
      },
      "storage": Storage {
        "handler": StorageHandler {
          "storage": CookieStorage {},
          "warn": Warn {
            "disableWarnings": undefined,
          },
        },
      },
      "webAuth": [Circular],
      "webMessageHandler": WebMessageHandler {
        "warn": Warn {
          "disableWarnings": undefined,
        },
        "webAuth": [Circular],
      },
    },
    "warn": Warn {
      "disableWarnings": false,
    },
    "webAuth": [Circular],
  },
  "ssodataStorage": SSODataStorage {
    "storage": Storage {
      "handler": StorageHandler {
        "storage": CookieStorage {},
        "warn": Warn {
          "disableWarnings": undefined,
        },
      },
    },
  },
  "transactionManager": TransactionManager {
    "keyLength": 32,
    "namespace": "com.auth0.auth.",
    "options": Object {
      "_csrf": "cw0pc1an-H9XDTeTz_pO9vgCCPC152gm-srY",
      "_intstate": "deprecated",
      "_sendTelemetry": true,
      "_timesToRetryFailedRequests": 0,
      "clientID": "RMpYVjKE_B85IO6Euc2i3IstVAstrEHK",
      "domain": "#{AUTH0_DOMAIN}",
      "jwksURI": undefined,
      "leeway": 1,
      "myerror": "UnauthorizedError: Please verify your email before logging in.",
      "myerrorcode": "user_not_verified",
      "nonce": "636892985897575998.YzdhZDAzZWEtMzMxMi00M2UyLWE3YTUtZWM4Y2Y1ZTg0MTA4OTMyMTFjN2UtZDQ3My00OTkyLWI5YTktMWQ3NDcwMzRkMWY4",
      "plugins": PluginHandler {
        "plugins": Array [],
      },
      "popup": false,
      "popupOrigin": undefined,
      "protocol": "oauth2",
      "redirect": true,
      "redirectURI": "https://dev-identityadmin.nice.org.uk/signin-auth0",
      "responseType": "code",
      "response_mode": "form_post",
      "rootUrl": "https://#{AUTH0_DOMAIN}",
      "scope": "openid read:profile",
      "state": "g6Fo2SBVdzZld3h1Z25QeURkREh1LTBVcU9rY2taRGR4dlBEU6N0aWTZIGxzcUl0aUxRTHFNam5yVFRJdzhlNllzLUFWNXU4bTJso2NpZNkgUk1wWVZqS0VfQjg1SU82RXVjMmkzSXN0VkFzdHJFSEs",
      "tenant": "#{AUTH0_DOMAIN}",
      "token_issuer": "https://#{AUTH0_DOMAIN}/",
      "type": "code",
      "userid": "auth0|5c9b9bd6e893312e96990ebe",
      "x-client-SKU": "ID_NETSTANDARD1_4",
      "x-client-ver": "5.2.4.0",
    },
    "storage": Storage {
      "handler": StorageHandler {
        "storage": CookieStorage {},
        "warn": Warn {
          "disableWarnings": undefined,
        },
      },
    },
  },
  "webMessageHandler": WebMessageHandler {
    "warn": Warn {
      "disableWarnings": undefined,
    },
    "webAuth": [Circular],
  },
}
`;

exports[`AppContainer components should create an instance of AuthApi correctly with no config 1`] = `
WebAuth {
  "_universalLogin": HostedPages {
    "baseOptions": Object {
      "_sendTelemetry": true,
      "_timesToRetryFailedRequests": 0,
      "clientID": "#{AUTH0_APP_CLIENT_ID}",
      "domain": "#{AUTH0_DOMAIN}",
      "jwksURI": undefined,
      "leeway": 1,
      "plugins": PluginHandler {
        "plugins": Array [],
      },
      "popup": false,
      "popupOrigin": undefined,
      "redirect": true,
      "redirectURI": undefined,
      "responseType": "code",
      "rootUrl": "https://#{AUTH0_DOMAIN}",
      "scope": "openid profile email ",
      "tenant": "#{AUTH0_DOMAIN}",
      "token_issuer": "https://#{AUTH0_DOMAIN}/",
    },
    "client": [Circular],
    "request": RequestBuilder {
      "_sendTelemetry": true,
      "_telemetryInfo": null,
      "_timesToRetryFailedRequests": 0,
      "headers": Object {},
    },
    "warn": Warn {
      "disableWarnings": false,
    },
  },
  "baseOptions": Object {
    "_sendTelemetry": true,
    "_timesToRetryFailedRequests": 0,
    "clientID": "#{AUTH0_APP_CLIENT_ID}",
    "domain": "#{AUTH0_DOMAIN}",
    "jwksURI": undefined,
    "leeway": 1,
    "plugins": PluginHandler {
      "plugins": Array [],
    },
    "popup": false,
    "popupOrigin": undefined,
    "redirect": true,
    "redirectURI": undefined,
    "responseType": "code",
    "rootUrl": "https://#{AUTH0_DOMAIN}",
    "scope": "openid profile email ",
    "tenant": "#{AUTH0_DOMAIN}",
    "token_issuer": "https://#{AUTH0_DOMAIN}/",
  },
  "client": Authentication {
    "baseOptions": Object {
      "_sendTelemetry": true,
      "_timesToRetryFailedRequests": 0,
      "clientID": "#{AUTH0_APP_CLIENT_ID}",
      "domain": "#{AUTH0_DOMAIN}",
      "jwksURI": undefined,
      "leeway": 1,
      "plugins": PluginHandler {
        "plugins": Array [],
      },
      "popup": false,
      "popupOrigin": undefined,
      "redirect": true,
      "redirectURI": undefined,
      "responseType": "code",
      "rootUrl": "https://#{AUTH0_DOMAIN}",
      "scope": "openid profile email ",
      "tenant": "#{AUTH0_DOMAIN}",
      "token_issuer": "https://#{AUTH0_DOMAIN}/",
    },
    "dbConnection": DBConnection {
      "baseOptions": Object {
        "_sendTelemetry": true,
        "_timesToRetryFailedRequests": 0,
        "clientID": "#{AUTH0_APP_CLIENT_ID}",
        "domain": "#{AUTH0_DOMAIN}",
        "jwksURI": undefined,
        "leeway": 1,
        "plugins": PluginHandler {
          "plugins": Array [],
        },
        "popup": false,
        "popupOrigin": undefined,
        "redirect": true,
        "redirectURI": undefined,
        "responseType": "code",
        "rootUrl": "https://#{AUTH0_DOMAIN}",
        "scope": "openid profile email ",
        "tenant": "#{AUTH0_DOMAIN}",
        "token_issuer": "https://#{AUTH0_DOMAIN}/",
      },
      "request": RequestBuilder {
        "_sendTelemetry": true,
        "_telemetryInfo": null,
        "_timesToRetryFailedRequests": 0,
        "headers": Object {},
      },
    },
    "passwordless": PasswordlessAuthentication {
      "baseOptions": Object {
        "_sendTelemetry": true,
        "_timesToRetryFailedRequests": 0,
        "clientID": "#{AUTH0_APP_CLIENT_ID}",
        "domain": "#{AUTH0_DOMAIN}",
        "jwksURI": undefined,
        "leeway": 1,
        "plugins": PluginHandler {
          "plugins": Array [],
        },
        "popup": false,
        "popupOrigin": undefined,
        "redirect": true,
        "redirectURI": undefined,
        "responseType": "code",
        "rootUrl": "https://#{AUTH0_DOMAIN}",
        "scope": "openid profile email ",
        "tenant": "#{AUTH0_DOMAIN}",
        "token_issuer": "https://#{AUTH0_DOMAIN}/",
      },
      "request": RequestBuilder {
        "_sendTelemetry": true,
        "_telemetryInfo": null,
        "_timesToRetryFailedRequests": 0,
        "headers": Object {},
      },
    },
    "request": RequestBuilder {
      "_sendTelemetry": true,
      "_telemetryInfo": null,
      "_timesToRetryFailedRequests": 0,
      "headers": Object {},
    },
    "ssodataStorage": SSODataStorage {
      "storage": Storage {
        "handler": StorageHandler {
          "storage": CookieStorage {},
          "warn": Warn {
            "disableWarnings": undefined,
          },
        },
      },
    },
    "warn": Warn {
      "disableWarnings": false,
    },
  },
  "crossOriginAuthentication": CrossOriginAuthentication {
    "baseOptions": Object {
      "_sendTelemetry": true,
      "_timesToRetryFailedRequests": 0,
      "clientID": "#{AUTH0_APP_CLIENT_ID}",
      "domain": "#{AUTH0_DOMAIN}",
      "jwksURI": undefined,
      "leeway": 1,
      "plugins": PluginHandler {
        "plugins": Array [],
      },
      "popup": false,
      "popupOrigin": undefined,
      "redirect": true,
      "redirectURI": undefined,
      "responseType": "code",
      "rootUrl": "https://#{AUTH0_DOMAIN}",
      "scope": "openid profile email ",
      "tenant": "#{AUTH0_DOMAIN}",
      "token_issuer": "https://#{AUTH0_DOMAIN}/",
    },
    "request": RequestBuilder {
      "_sendTelemetry": true,
      "_telemetryInfo": null,
      "_timesToRetryFailedRequests": 0,
      "headers": Object {},
    },
    "storage": Storage {
      "handler": StorageHandler {
        "storage": CookieStorage {},
        "warn": Warn {
          "disableWarnings": undefined,
        },
      },
    },
    "webAuth": [Circular],
    "webMessageHandler": WebMessageHandler {
      "warn": Warn {
        "disableWarnings": undefined,
      },
      "webAuth": [Circular],
    },
  },
  "popup": Popup {
    "baseOptions": Object {
      "_sendTelemetry": true,
      "_timesToRetryFailedRequests": 0,
      "clientID": "#{AUTH0_APP_CLIENT_ID}",
      "domain": "#{AUTH0_DOMAIN}",
      "jwksURI": undefined,
      "leeway": 1,
      "plugins": PluginHandler {
        "plugins": Array [],
      },
      "popup": false,
      "popupOrigin": undefined,
      "redirect": true,
      "redirectURI": undefined,
      "responseType": "code",
      "rootUrl": "https://#{AUTH0_DOMAIN}",
      "scope": "openid profile email ",
      "tenant": "#{AUTH0_DOMAIN}",
      "token_issuer": "https://#{AUTH0_DOMAIN}/",
    },
    "client": Authentication {
      "baseOptions": Object {
        "_sendTelemetry": true,
        "_timesToRetryFailedRequests": 0,
        "clientID": "#{AUTH0_APP_CLIENT_ID}",
        "domain": "#{AUTH0_DOMAIN}",
        "jwksURI": undefined,
        "leeway": 1,
        "plugins": PluginHandler {
          "plugins": Array [],
        },
        "popup": false,
        "popupOrigin": undefined,
        "redirect": true,
        "redirectURI": undefined,
        "responseType": "code",
        "rootUrl": "https://#{AUTH0_DOMAIN}",
        "scope": "openid profile email ",
        "tenant": "#{AUTH0_DOMAIN}",
        "token_issuer": "https://#{AUTH0_DOMAIN}/",
      },
      "dbConnection": DBConnection {
        "baseOptions": Object {
          "_sendTelemetry": true,
          "_timesToRetryFailedRequests": 0,
          "clientID": "#{AUTH0_APP_CLIENT_ID}",
          "domain": "#{AUTH0_DOMAIN}",
          "jwksURI": undefined,
          "leeway": 1,
          "plugins": PluginHandler {
            "plugins": Array [],
          },
          "popup": false,
          "popupOrigin": undefined,
          "redirect": true,
          "redirectURI": undefined,
          "responseType": "code",
          "rootUrl": "https://#{AUTH0_DOMAIN}",
          "scope": "openid profile email ",
          "tenant": "#{AUTH0_DOMAIN}",
          "token_issuer": "https://#{AUTH0_DOMAIN}/",
        },
        "request": RequestBuilder {
          "_sendTelemetry": true,
          "_telemetryInfo": null,
          "_timesToRetryFailedRequests": 0,
          "headers": Object {},
        },
      },
      "passwordless": PasswordlessAuthentication {
        "baseOptions": Object {
          "_sendTelemetry": true,
          "_timesToRetryFailedRequests": 0,
          "clientID": "#{AUTH0_APP_CLIENT_ID}",
          "domain": "#{AUTH0_DOMAIN}",
          "jwksURI": undefined,
          "leeway": 1,
          "plugins": PluginHandler {
            "plugins": Array [],
          },
          "popup": false,
          "popupOrigin": undefined,
          "redirect": true,
          "redirectURI": undefined,
          "responseType": "code",
          "rootUrl": "https://#{AUTH0_DOMAIN}",
          "scope": "openid profile email ",
          "tenant": "#{AUTH0_DOMAIN}",
          "token_issuer": "https://#{AUTH0_DOMAIN}/",
        },
        "request": RequestBuilder {
          "_sendTelemetry": true,
          "_telemetryInfo": null,
          "_timesToRetryFailedRequests": 0,
          "headers": Object {},
        },
      },
      "request": RequestBuilder {
        "_sendTelemetry": true,
        "_telemetryInfo": null,
        "_timesToRetryFailedRequests": 0,
        "headers": Object {},
      },
      "ssodataStorage": SSODataStorage {
        "storage": Storage {
          "handler": StorageHandler {
            "storage": CookieStorage {},
            "warn": Warn {
              "disableWarnings": undefined,
            },
          },
        },
      },
      "warn": Warn {
        "disableWarnings": false,
      },
    },
    "crossOriginAuthentication": CrossOriginAuthentication {
      "baseOptions": Object {
        "_sendTelemetry": true,
        "_timesToRetryFailedRequests": 0,
        "clientID": "#{AUTH0_APP_CLIENT_ID}",
        "domain": "#{AUTH0_DOMAIN}",
        "jwksURI": undefined,
        "leeway": 1,
        "plugins": PluginHandler {
          "plugins": Array [],
        },
        "popup": false,
        "popupOrigin": undefined,
        "redirect": true,
        "redirectURI": undefined,
        "responseType": "code",
        "rootUrl": "https://#{AUTH0_DOMAIN}",
        "scope": "openid profile email ",
        "tenant": "#{AUTH0_DOMAIN}",
        "token_issuer": "https://#{AUTH0_DOMAIN}/",
      },
      "request": RequestBuilder {
        "_sendTelemetry": true,
        "_telemetryInfo": null,
        "_timesToRetryFailedRequests": 0,
        "headers": Object {},
      },
      "storage": Storage {
        "handler": StorageHandler {
          "storage": CookieStorage {},
          "warn": Warn {
            "disableWarnings": undefined,
          },
        },
      },
      "webAuth": [Circular],
      "webMessageHandler": WebMessageHandler {
        "warn": Warn {
          "disableWarnings": undefined,
        },
        "webAuth": [Circular],
      },
    },
    "transactionManager": TransactionManager {
      "keyLength": 32,
      "namespace": "com.auth0.auth.",
      "options": Object {
        "_sendTelemetry": true,
        "_timesToRetryFailedRequests": 0,
        "clientID": "#{AUTH0_APP_CLIENT_ID}",
        "domain": "#{AUTH0_DOMAIN}",
        "jwksURI": undefined,
        "leeway": 1,
        "plugins": PluginHandler {
          "plugins": Array [],
        },
        "popup": false,
        "popupOrigin": undefined,
        "redirect": true,
        "redirectURI": undefined,
        "responseType": "code",
        "rootUrl": "https://#{AUTH0_DOMAIN}",
        "scope": "openid profile email ",
        "tenant": "#{AUTH0_DOMAIN}",
        "token_issuer": "https://#{AUTH0_DOMAIN}/",
      },
      "storage": Storage {
        "handler": StorageHandler {
          "storage": CookieStorage {},
          "warn": Warn {
            "disableWarnings": undefined,
          },
        },
      },
    },
    "warn": Warn {
      "disableWarnings": false,
    },
    "webAuth": [Circular],
  },
  "redirect": Redirect {
    "baseOptions": Object {
      "_sendTelemetry": true,
      "_timesToRetryFailedRequests": 0,
      "clientID": "#{AUTH0_APP_CLIENT_ID}",
      "domain": "#{AUTH0_DOMAIN}",
      "jwksURI": undefined,
      "leeway": 1,
      "plugins": PluginHandler {
        "plugins": Array [],
      },
      "popup": false,
      "popupOrigin": undefined,
      "redirect": true,
      "redirectURI": undefined,
      "responseType": "code",
      "rootUrl": "https://#{AUTH0_DOMAIN}",
      "scope": "openid profile email ",
      "tenant": "#{AUTH0_DOMAIN}",
      "token_issuer": "https://#{AUTH0_DOMAIN}/",
    },
    "crossOriginAuthentication": CrossOriginAuthentication {
      "baseOptions": Object {
        "_sendTelemetry": true,
        "_timesToRetryFailedRequests": 0,
        "clientID": "#{AUTH0_APP_CLIENT_ID}",
        "domain": "#{AUTH0_DOMAIN}",
        "jwksURI": undefined,
        "leeway": 1,
        "plugins": PluginHandler {
          "plugins": Array [],
        },
        "popup": false,
        "popupOrigin": undefined,
        "redirect": true,
        "redirectURI": undefined,
        "responseType": "code",
        "rootUrl": "https://#{AUTH0_DOMAIN}",
        "scope": "openid profile email ",
        "tenant": "#{AUTH0_DOMAIN}",
        "token_issuer": "https://#{AUTH0_DOMAIN}/",
      },
      "request": RequestBuilder {
        "_sendTelemetry": true,
        "_telemetryInfo": null,
        "_timesToRetryFailedRequests": 0,
        "headers": Object {},
      },
      "storage": Storage {
        "handler": StorageHandler {
          "storage": CookieStorage {},
          "warn": Warn {
            "disableWarnings": undefined,
          },
        },
      },
      "webAuth": [Circular],
      "webMessageHandler": WebMessageHandler {
        "warn": Warn {
          "disableWarnings": undefined,
        },
        "webAuth": [Circular],
      },
    },
    "warn": Warn {
      "disableWarnings": false,
    },
    "webAuth": [Circular],
  },
  "ssodataStorage": SSODataStorage {
    "storage": Storage {
      "handler": StorageHandler {
        "storage": CookieStorage {},
        "warn": Warn {
          "disableWarnings": undefined,
        },
      },
    },
  },
  "transactionManager": TransactionManager {
    "keyLength": 32,
    "namespace": "com.auth0.auth.",
    "options": Object {
      "_sendTelemetry": true,
      "_timesToRetryFailedRequests": 0,
      "clientID": "#{AUTH0_APP_CLIENT_ID}",
      "domain": "#{AUTH0_DOMAIN}",
      "jwksURI": undefined,
      "leeway": 1,
      "plugins": PluginHandler {
        "plugins": Array [],
      },
      "popup": false,
      "popupOrigin": undefined,
      "redirect": true,
      "redirectURI": undefined,
      "responseType": "code",
      "rootUrl": "https://#{AUTH0_DOMAIN}",
      "scope": "openid profile email ",
      "tenant": "#{AUTH0_DOMAIN}",
      "token_issuer": "https://#{AUTH0_DOMAIN}/",
    },
    "storage": Storage {
      "handler": StorageHandler {
        "storage": CookieStorage {},
        "warn": Warn {
          "disableWarnings": undefined,
        },
      },
    },
  },
  "webMessageHandler": WebMessageHandler {
    "warn": Warn {
      "disableWarnings": undefined,
    },
    "webAuth": [Circular],
  },
}
`;
